@@ -1,4 +1,7 @@
 Revision history
 
+- Should Move be seperated from the create/update/rename operations?
+
 1.0.0-rc1 :
 	- Mkdir, rename directory, listing working.
+	- Added utils.py to have common utilities.
